--- a/[DAM2]homework78.Rmd
+++ b/[DAM2]homework78.Rmd
@@ -7,43 +7,286 @@ output: word_document
 
 ```{r setup, include=FALSE}
 library(VGAM)
+library(tidyr)
+library(dplyr)
+library(brglm2)
 ```
 
 ## 6.8 <표 6.8>은 소세포 폐암 치료에 대한 임상시험 결과이다. 환자들은 랜덤하게 두 개의 치료군으로 배정되었다. 순차적 치료군은 각 치료 사이클에서 동일한 조합의 화학요법 치료제를 받도록 하는 그룹이고, 교차적 치료군은 각 치료 사이클마다 3개의 서로 다른 화학요법 치료제를 치료 교대로 받도록 하는 그룹이다. 비례오즈 누적 로짓모형을 적합하여 추정된 치료군의 효과를 해석하라. 교호작용항을 포함하는 모형의 적합도가 더 유의한지를 검토하라. 
+  
+주어진 자료를 이용한 비례오즈 누적 로짓모형은 다음과 같이 설정할 수 있다.
 
-6.2.2
-
-
+$$
+logit[P(Y \le j)] = \alpha_j + \beta_1x_{therapy} + \beta_2x_{gender}
+$$
+  
+반응변수는 병증의 호전 정도를 중심으로 4가지(pd, nc, pr, cr)로 분류했고, 각각 1~4로 코딩했다. 위 모형을 기초로 한 모형 적합 결과는 다음과 같다.
+  
 ```{r 6.8.1}
-
+#. CLPO 치료군 효과 분석
+dt1 <- read.table('6_8.csv', sep = ',', header = T)
+fit1 <- vglm(cbind(pd, nc, pr, cr) ~ therapy + gender,
+             family = cumulative(parallel = T), data = dt1)
+summary(fit1)
 ```
+  
+적합 결과를 바탕으로 추정한 모형은 다음과 같다.
+
+$$
+logit[P(Y \le j)] = \alpha_j - 0.58x_{therapy} -0.54x_{gender}
+$$
+  
+위 모형을 중심으로 병증 호전의 오즈에 설명변수가 미치는 효과를 해석하면 다음과 같다. 순차치료군의 효과가 누적오즈에 미치는 영향은 -0.58로, 순차치료군에 해당하는 경우 교차치료군에 해당하는 것보다 주어진 것보다 병증이 호전될 누적오즈가 $e^{-0.58} = 0.56$배만큼 낮아진다. 성별 효과가 누적오즈에 미치는 영향은 -0.54로, 남성 피험자가 여성 피험자에 비해 주어진 것보다 병증이 호전될 누적오즈는 $e^{-0.54} = 0.58$배만큼 낮아진다. 다만, 치료군에 따른 효과의 상관계수는 $-0.58 \pm 1.96 \times 0.21$로 (-0.99, -0.17)의 95% 신뢰구간을 가지고 있으나, 성별 효과의 상관계수는 $-0.54 \pm 1.96 \times 0.3$으로 (-1.13, 0.04)의 95% 신뢰구간을 가지고 있어, 유의수준 0.05에서 통계적으로 유의미하지 않은 것으로 나타났다. 
 
 
+``` {r 6.8.2}
+# 교호작용 효과 분석
+fit1_1 <- vglm(cbind(pd, nc, pr, cr) ~ therapy*gender, 
+               family = cumulative(parallel = T), data = dt1)
+lrtest(fit1, fit1_1)
+```
+  
+교호작용을 포함한 모형(Model 2)과 포함하지 않은 모형(Model 1)의 적합도를 비교한 결과, 미포함 모형의 이탈도(deviance)는 -25.542, 포함 모형의 이탈도는 -25.018로, 적합도 검정을 위한 통계량은 $-25.542 + 25.018 = -0.524$이고 자유도는 1이다. 해당 통계량을 기준으로 한 카이제곱 분포 확률값은 0.47이다. 따라서 0.05 유의수준에서 교호작용항의 회귀계수가 0이라는 귀무가설을 기각할 수 없어 교호작용항을 포함한 모형이 미포함 모형에 비해 유의하다고 할 수 없다.
+  
+  
+  
 ## 6.16. <표 6.10>은 연구대상자들을 임의적으로 대조군과 처리군으로 배정하여 실험한 자료이다. 처리군에 배정된 연구대상자들은 사일리움(psyllium)을 포함하는 시리얼을 연구기간 동안 매일 일정량씩 섭취하였다. 이 연구의 목적은 이 시리얼이 LDL 콜레스테롤을 낮추는 효과가 있는지를 알아보는 것이다. 빈도론적 방법이나 베이지안 방법을 사용해서 말기 콜레스테롤 수준에 대한 모형을 구하고자 한다. 초기의 콜레스테롤 수준은 (a) 적절한 점수를 사용하여 공변량(양적 변수)으로 처리하고, (b) 범주형 변수로 처리하여 모형을 적합할 수 있다. 각 경우에 대해서 처리 효과를 분석하고 그 결과를 서로 비교하고 해석하라.
+  
+초기 콜레스테롤 수준을 공변량 변수로 처리하기 위해 비례오즈 누적로짓모형을 설정하여 데이터를 적합할 수 있다. 이때의 모형은 다음과 같다.
+  
+$$
+logit[P(Y \le j)] = \alpha_j + \beta_1x_{treatment} + \beta_2x_{beginning}
+$$
+  
+j는 연구 종료 시점의 콜레스테롤 수치 수준이다. 위 모형을 적합한 결과는 다음과 같다.
+  
+  
+``` {r 6.16.1}
+dt2 <- read.table('6_16.csv', sep = ',', header = T)
+dt2$treatment = as.factor(dt2$treatment)
 
+#공변량으로 처리 - CLM
+fit2 <- vglm(cbind(X1, X2, X3, X4) ~ treatment + beginning, 
+             family = cumulative(parallel = T), data = dt2)
+summary(fit2)
+```
+  
+적합 결과 추정한 모형은 다음과 같다.
 
-BCLM과 CLM 비교
+$$
+logit[P(Y \le j)] = \alpha_j + 0.8x_{treatment}-1.87x_{beginning}
+$$
+  
+연구 전 콜레스테롤 농도와 치료의 효과에 관한 회귀계수는 모두 0.05 수준에서 유의한 것으로 나타났고, 적합도 검정을 위한 잔차이탈도값은 14.543, df=19로 카이제곱 분포상 이보다 극단적인 값을 가질 확률은 0.75로, 0.05 수준에서 설정한 모형의 적합값과 관측값 간에는 유의미한 차이가 없는 것으로 결론내릴 수 있다.  
+  
+위 모형을 해석하면, 먼저 연구 전 콜레스테롤 농도가 1단계 높아질수록 주어진 수준 이하로 콜레스테롤 농도가 낮은 그룹에 속할 누적오즈는 $e^{-1.87} = 0.15$배만큼 낮아진다. 즉, 실험 전에 콜레스테롤 농도가 낮은 피험자가 농도가 높은 피험자에 비해 콜레스테롤 농도가 낮을 가능성이 상대적으로 높다고 할 수 있다. 
+또, 사일리움 시리얼 섭취의 효과를 보여주는 회귀계수는 0.8로, 사일리움 시리얼을 섭취한 피험자가 주어진 수준 이하로 콜레스테롤 농도가 낮은 그룹에 속할 누적오즈는 $e^{0.8} = 2.23$배만큼 높아진다. 즉, 사일리움 시리얼을 섭취한 피험자는 그렇지 않은 대조군에 비해 콜레스테롤 농도가 낮을 가능성이 상대적으로 높다고 할 수 있다.
+  
+  
+연구 전 콜레스테롤 수치를 범주형 통제변수로 해석하기 위해서 기준범주 로짓모형을 설정할 수 있다. 해당 모형은 아래와 같다.
 
+$$
+log(\frac{\pi_j}{\pi_c}) = \alpha_j + \beta_{j1}x_{treatment} + \beta_{j2i}x_{beginningi}
+$$
+  
+관측자료를 위 모형에 적합한 결과는 다음과 같다.
+   
+``` {r 6.16.2}
+# 범주형 변수로 처리 - BCLM
+fit2_2 <- vglm(cbind(X1, X2, X3, X4) ~ treatment + factor(beginning), 
+               family = multinomial, data = dt2)
+summary(fit2_2)
+```
+  
+해당 모형의 이탈도잔차는 12.12, df = 9로 모형의 적합도는 관측치를 잘 설명하고 있다고 0.05 유의수준에서 결론내릴 수 있다. 다만, 이와 같은 기준범주 로짓모형은 모든 변수를 범주변수로 간주하는 특성상 모수의 검정력이 매우 낮게 나오는데, 위 적합 결과상으로는 사일리움 섭취여부에 관한 1범주와 2범주의 회귀계수 이외에 모든 모수가 유의수준 0.05에서 유의하지 않은 것으로 나타났다. 특히, 분할표상 (실험 전 콜레스테롤 농도-실험 후 콜레스테롤 농도) 기준으로 분류한 경우 빈도 수가 0인 구획이 많아 실험 전 콜레스테롤 농도와 관련된 모수가 피셔 스코어 알고리즘을 기준으로 계산했을 때에 제대로 계산되지 않아 표준편차와 z값이 정확하지 않다. 
+  
+각 항에 대한 회귀계수 행렬은 아래와 같다.
+  
+``` {r 6.16.4}
+coef(fit2_2, matrix = T)
+```
+  
+첫 번째 종료 후 콜레스테롤 그룹(1범주)과 네 번째 그룹(4범주) 간의 오즈비($log(\frac{\pi_1}{\pi_4})$)를 기준으로 위 적합 결과를 반영한 예측식은 다음과 같다.
 
+$$
+log(\frac{P(Y=1)}{P(Y=4)}) = 18.72 + 1.82x_{treatment} -\beta_{1i}x^{beginning}_i
+$$
+  
+위 모형을 해석하면, 1범주와 4범주를 기준으로 사일리움 시리얼을 섭취한 실험군에 해당하는 경우 1범주에 해당할 오즈는 대조군에 비해 $e^{1.84} = 6.3$배가 된다. 실험 전 콜레스테롤 농도가 2범주에 해당하는 경우, 1범주에 해당할 오즈는 $e^{-16.55} < 0.0001$배로 작아지게 된다. 실험 전 콜레스테롤 농도가 높으면 높을수록 실험 후 콜레스테롤 농도가 1범주에 해당할 오즈는 작아지게 된다.
 
-
-
+위 해석을 일반화하면, 모든 실험종료 후 콜레스테롤 그룹에 대해 사일리움 시리얼 섭취는 낮은 수준의 콜레스테롤 농도 범주에 해당할 가능성을 높여주고, 실험 전 콜레스테롤 농도가 높을수록 낮은 수준의 콜레스테롤 농도 범주에 해당할 가능성이 줄어든다. 
+  
+두 모형을 비교하면, 사일리움 시리얼의 효과와 실험 전 콜레스테롤 농도가 실험 결과에 대해 가지는 효과의 방향은 모두 일치하는 것으로 나타난다. 비례오즈 누적로짓모형은 이 효과를 적은 모수로 체계적으로 보여주는 반면, 기준범주 로짓모형은 많은 모수로 복잡한 모형을 통해 보여주지만 각각의 수준에 따라 어떻게 효과가 달라지는지를 세세하게 보여줄 수 있다. 다만 사례의 경우 분할표 상 빈도수가 0인 구획이 상당수 존재해서 정확한 모수값 계산이 어려운 문제가 있다.
+  
+  
+  
 ## 7.2 <표 2.9>에 있는 자료에서 D = 피고인의 인종, V = 희생자의 인종, P = 사형 선고 여부를 나타낸다. <표 7.13>은 로그선형모형(DV, DP, PV)의 적합 결과이다.
 
 a. V의 각 수준에서 D와 P 간의 조건부오즈비를 추정하고 그 의미를 해석하라.
+  
+문제에서 주어진 로그선형모형은 동질적 연고나성 모형으로 이를 식으로 나타내면 다음과 같다.
 
+$$
+log\mu_{DPV} = \lambda + \lambda^D_i + \lambda^P_j + \lambda^V_k + \lambda^{DP}_{ij} + \lambda^{DV}_{ik} + \lambda^{PV}_{jk} 
+$$
+  
+위 모형에서 D와 P간의 조건부오즈비는 다음과 같이 계산된다.
+
+$$
+log\theta_{DP(k)} = log(\frac{\mu_{11k}\mu_{22k}}{\mu_{12k}\mu_{21k}}) = \lambda^{DP}_{11}+ \lambda^{DP}_{22} - \lambda^{DP}_{12} - \lambda^{DP}_{21} = \lambda^{DP}_{22}
+$$
+  
+표 7.13에서 위 값은 회귀계수 -0.87로 표현되며 이는 $e^{-0.87} = 0.42$이다. 이 값은 희생자의 인종이 주어졌을 때에, 피고인이 백인인 경우 사형선고를 받을 오즈는 0.42라는 의미로, 흑인이 사형선고를 받을 가능성이 더 높다고 해석할 수 있다.
+  
+  
 b. 이 모형의 적합도 검정을 시행하고 결과를 해석하라.
 
+표 7.13에 주어진 수치를 바탕으로 적합도 검정 결과를 도출하면, 이탈도 전차는 0.38, df=1로 카이제곱 분포상 이보다 극단적인 잔차값을 가질 확률은 0.5377로 계산된다. 따라서 관측값이 모형의 적합값과 같다는 귀무가설을 기각할 수 없어, 모형의 적합도가 유의수준 0.05에서 유의미하게 확보되었다고 할 수 있다.
+  
+  
 c. 이 책의 웹사이트에 있는 파일 DeathPenalty를 이용하여 아래 출력결과를 구하라. P를 반응변수로 취하여 대응되는 로지스틱 모형을 제시하라. 자료를 그룹화한 파일을 만들어 모형을 적합하고 D와 V효과에 대한 추정값과 로그 선형모형에서의 추정값이 어떻게 관련되는지를 설명하라. 둘 중 어떤 모형이 주어진 자료를 분석하는데 더 적절한지 설명하라.
+  
+표 7.13에서 현출한 로그선형모형은 다음과 같다.
+  
+```{r 7.2.c}
+#로그선형모형
+dt3 <- read.table('DeathPenalty.txt', sep = '\t', header = T)
+fit3 <- glm(count ~ D + V + P + D:V + D:P + P:V, family = poisson, data = dt3)
+summary(fit3)
+```
 
+로그선형모형을 기준으로, V와 P간의 조건부오즈비를 구하면 $e^{2.4} = 11.02$이고, D와 P간의 조건부오즈비를 구하면 $e^{-0.87} = 0.42$이다. 이 결과에 따라, 다른 변수를 통제했을 때, 희생자가 백인일 때 사형선고 비율이 11배 높고, 피고인이 흑인일 때 사형선고 가능성이 2.38배 높다고 할 수 있다.
+  
+  
+주어진 관측치를 바탕으로 로지스틱 회귀모형을 아래와 같이 설정하고, 이를 적합한 결과는 다음과 같다.
 
-
+$$
+logit[P(P=1)] = \alpha + \beta_1x_{dependant} + \beta_2x_{victim} = -3.6 - 0.87x_{dependant} + 2.4x_{victim}
+$$
+  
+  
+``` {r 7.2.c.2}
+# 로지스틱 회귀모형
+dt3_1 <- dt3 %>% spread(P, count)
+fit3_1 <- glm(yes/(yes+no) ~ D + V, family = binomial,
+              weight = yes + no, data = dt3_1)
+summary(fit3_1)
+```
+  
+적합 결과에 따라 D와 V가 로그오즈비에 미치는 효과는 회귀계수 -0.87과 2.4로 나타낼 수 있으며, 이는 로그선형모형에서 조건부 오즈비값과 일치한다. 
+  
+사례에서 보는 것과 같이, 모든 설명변수가 범주형인 경우 동질적 연관성 모형은 로지스틱 선형모형과 동일한 효과 분석 결과를 보여줄 수 있다. 이 중 동질적 연관성 모형은 변수 간의 관계를 좀 더 폭 넓게 확인할 수. 있지만 모형이 복잡하고 모수가 많은 단점이 있다. 로지스틱 회귀모형은 모형이 단순하지만 설명변수 상호 간의 관계를 명확하게 확인하기 힘든 단점이 있다. 따라서 변수 상호간의 관계를 탐색하는 데에는 로그선형모형이, 변수 간의 명확한 관계에 대한 가설을 기반으로 이를 검증하는 데에는 로지스틱 회귀모형이 적합하다고 할 수 있다.
+  
+  
 ## 7.5 <표 7.5>의 자동차 사고 자료에 대하여 다음 물음에 답하라.
 
-7.2.7
-
+``` {r 7.5.a}
+dt4 <- read.table('Accidents2.dat', sep = ',', header = T)
+colnames(dt4) <- c('G', 'L', 'S', 'I', 'count')
+fit4 <- glm(count ~ G + L + S + I + G:L + G:S + G:I + L:S + L:I + S:I, 
+             family = poisson, data = dt4)
+summary(fit4)
+```
 
 a. <표 7.7>에서 모형 (GL, GS, LS, GI, LI, SI)에서 추정된 오즈비를 이용하여 농촌지역에서 안전벨트를 매지 않은 여성이 부상당할 가능성이 가장 높게 예측되는지를 설명하라.
+  
+표 7.7에서 G, L, S 각각 변수와 I간의 조건부 오즈비는 모두 1보다 작은 것으로 나타나서 여성보다는 남성, 농촌보다는 도시, 안전벨트를 매지 않은 것보다는 맨 경우에 상대적으로 부상을 당할 오즈가 낮은 것으로 나타났다.
+  
+따라서, 이상의 조건부 오즈비를 기준으로 판단했을 때에 농촌지역(G = 0)의 안전벨트를 매지 않은(S = 0) 여성(G = 0)이 부상당할 가능성이 가장 높을 것이라고 예측할 수 있다.
+  
+이상의 결과는 모형을 바탕으로 하는 아래의 예측치 테이블을 통해서도 확인할 수 있다. 예측치를 기준으로 부상의 확률이 가장 높은(prop.yes = 0.23) 지역은 농촌, 여성, 안번벨트 미착용 군으로 나타난다.
+  
+``` {r 7.5.a.1}
+dt4_3 <- data.frame(dt4$G, dt4$L, dt4$S, dt4$I, fitted(fit4))
+colnames(dt4_3) = c('G', 'L', 'S', 'I', 'predicted')
+dt4_3 %>% group_by(G, L, S) %>% spread(I, predicted) %>%
+  mutate(prop.yes = yes/(yes+no))
+```
 
 b. 다음과 같이 2단계에 걸쳐 모형을 적합해보자. 1단계에서는 삼차원 $G \times L \times S$ 분할표에서 S를 반응변수로 간주하는 로지스틱 모형을 적합한다. 2단계에서는 사차원 분할표에서 위의 세 변수를 I에 대한 예측변수들로 간주하여 로지스틱 모형을 적합한다. 이와 같은 복합적인 모형이 합리적인 이유를 설명하고 모형을 적합한 후에 그 결과를 해석하라.
+  
+<1단계>
+  
+``` {r 7.5.b}
+#. 1단계
+# G X L X S 분할표 생성
+dt4_1 <- dt4 %>% spread(S, count) %>% group_by(G, L) %>% summarise(yes = sum(yes), no = sum(no))
+dt4_1
+```
+  
+``` {r 7.5.b.2}
+#. 모형 적합
+fit4_1 <- glm(yes/(yes + no) ~ G + L, family = binomial, weight = yes + no, data = dt4_1)
+summary(fit4_1)
+```
+  
+  
+문제에서 제시한 로지스틱 회귀모형과 관측치를 적합한 결과를 바탕으로 추정한 회귀식은 다음과 같다.
+
+$$
+logit[P(S=1)] = \alpha + \beta_1x_G + \beta_2x_L = 0.45 -0.42x_G -0.03x_L
+$$
+  
+로지스틱 회귀모형 추정 결과, 성별이 남성인 경우 안전벨트를 착용할 오즈는 여성에 비해 $e^{-0.42} = 0.65$ 수준이고, 지역이 도시인 경우 안전벨트를 착용할 오즈는 농촌에 비해 $e^{-0.03} = 0.97$ 수준이다.
+  
+<2단계> 
+  
+``` {r 7.5.b.3}
+# 데이터 변형
+dt4_2 <- dt4 %>% spread(I, count)
+# 모형 적합
+fit4_2 <- glm(yes/(yes+no) ~ G + L + S, family = binomial, weight = yes + no, data = dt4_2)
+summary(fit4_2)
+```
+  
+다음으로, I를 반응변수로, G, L, S를 예측변수로 하는 로지스틱 회귀모형을 관측치에 적합한 예측식은 다음과 같다.
+
+$$
+logit[p(I=1)] = \alpha + \beta_1x_G + \beta_2x_L + \beta_3x_S = -1.22 - 0.54x_G - 0.76x_L - 0.82x_S
+$$
+  
+위 모형을 해석하면, 성별이 남성인 경우 부상이 발생할 오즈는 여성에 비해 $e^{-0.54} = 0.58$배이고, 지역이 도시인 경우 부상이 발생할 오즈는 농촌에 비해 $e^{-0.76} = 0.47$배이며, 안전벨트를 착용한 경우 부상이 발생할 오즈는 착용하지 않은 경우에 비해 $e^{-0.82} = 0.44$배이다. 
+
+<해석>
+  
+이상의 결과는 로그선형모형(LLM)과 로지스틱 회귀모형(LRM) 간의 관계를 보여준다. 반응변수가 이항변수이면 동질적 연관성 모형은 교호작용이 없는 로지스틱 회귀모형과 동등해지는데, 주어진 사례에서 (GLS, GI, LI, SI) 모형이 I를 반응변수로, G, L, S를 설명변수로 하는 로지스틱 회귀모형과 동등하다.
+  
+LLM (GLS, GI, LI, SI)를 식으로 나타내면 다음과 같다.
+
+$$
+log\mu_{gils} = \lambda + \lambda^G_g + \lambda^L_l + \lambda^S_s + \lambda^I_i + \lambda^{GL}_{gl} + \lambda^{GS}_{gs} + \lambda^{LS}_{ls} + \lambda^{GI}_{gi} + \lambda^{LI}_{li} + \lambda^{SI}_{si} + \lambda^{GLS}_{gls}
+$$
+  
+LRM을 식으로 나타내면 다음과 같다.
+
+$$
+logit[P(I=1)] = \alpha + \beta^G_g + \beta^L_l + \beta^S_s
+$$
+  
+LRM의 상수항은 G, L, S의 작용없이 I만으로 부상에 영향을 미치는 효과를 수치화한 것으로, LLM에서 조건부 오즈비와 같다. 이를 계산하면 다음과 같다.
+
+$$
+log\theta_{I(gls)} = log(\frac{\mu_{g2ls}}{\mu_{g1ls}}) = \lambda^I_2 - \lambda^I_1 = \lambda^I_1 = -1.22
+$$
+  
+같은 과정으로 $\beta^G_g, \beta^L_l, \beta^S_s$를 구하면 다음과 같다.
+
+| 회귀계수  | LLM               | 결과값 |
+|-----------|-------------------|--------|
+|$\beta^G_g$|$\lambda^{GI}_{22}$|-0.54   |
+|$\beta^L_l$|$\lambda^{LI}_{22}$|-0.76   |
+|$\beta^S_s$|$\lambda^{SI}_{22}$|-0.82   |
+  
+이와 유사한 과정을 통해 1단계에서 적합한 LRM 모형식의 회귀계수를 구하면 다음과 같다.
+
+| 회귀계수  | LLM                                     | 결과값 |
+|-----------|-----------------------------------------|--------|
+|$\beta^G_g$|$\lambda^{GS}_{22} + \lambda^{GLS}_{222}$|0.13    |
+|$\beta^L_l$|$\lambda^{LS}_{22} + \lambda^{GLS}_{222}$|-0.03   |
+  
+이상의 분석결과를 해석하면 다음과 같다.
+  
+첫째, I에 영향을 미치는 변수는 G, L, S로 남성, 도시, 안전벨트 착용은 부상 오즈를 줄이는 데에 도움을 준다. 둘째, S에 영향을 미치는 변수는 G, L로 남성, 농촌지역일수록 안전벨트 착용 오즈를 높아진다. 셋째, 설명변수 간 영향과 설명변수와 반응변수(I)의 관계를 종합적으로 고려해볼 때, 성별이 남성인 경우 부상 가능성이 낮아지는 효과가 지역이 도시일 때에 부상 오즈가 낮아지는 효과를 비교했을 때에, 성별 효과는 부상 오즈에 영향을 미치는 또다른 변수인 안전벨트 착용에 양의 효과를 가지기 때문에 종합하면 부상 오즈가 낮아지는 효과가 크지만, 지역 효과는 도시 지역의 경우 안전벨트 착용에는 음의 효과, 부상 여부에도 음의 효과를 가지기 때문에 종합했을 때에 부상 오즈가 낮아지는 효과가 작을 것으로 예상할 수 있다. 이는 표7.7에서 $\theta_{GI} = 0.58$, $\theta_{LI} = 0.47$인 점을 통해서도 확인할 수 있다.
+
+이상의 2단계 분석 과정을 통해서 로지스틱 회귀분석의 약점이라고 할 수 있는 설명변수 간의 관계에 대해서 살펴볼 수 있다. 즉, 단순한 로지스틱 회귀분석을 통해서는 설명변수 간에 어떤 관계가 존재하고 이 효과가 최종적으로 설명변수에 어떤 효과를 미치는지를 확인하기 어렵지만, 설명변수 간의 로지스틱 회귀모형을 1번 더 분석함으로써 설명변수 간의 효과의 크기와 방향을 확인함으로써 최종적인 모형의 세부적인 효과까지 살펴볼 수 있다.
 
