--- a/[DAM2]homework4.Rmd
+++ b/[DAM2]homework4.Rmd
@@ -6,24 +6,56 @@ output: word_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(gam)
 ```
 
 ## 1. 4강 과제에서 사용한 crab 자료를 이용하여 무게(x)를 예측변수로 사용하여 부수체(y=1) 확률에 대한 로지스틱 회귀모형을 적합하라.
 
+```{r 1}
+dt <- read.table('Crabs.txt', header=TRUE)
+fit <- glm(y~weight, family = binomial, data = dt)
+summary(fit)
 ```
 
-### a. ML예측식을 구하라. 표본무게값의 평균값인 2.437kg일 때에 무게가 (1) 1kg 증가할 때의 효과를 선형근사식을 이용하여 구하라. 이 값은 상대적으로 큰 증가량을 ㅌ나타내므로 (2) 0.10kg 증가에 대하여 결과를 해석하고, (3) 무게가 0.58kg일 때 표준편차 증가에 대하여 결과를 해석하라.
+### a. ML예측식을 구하라. 표본무게값의 평균값인 2.437kg일 때에 무게가 (1) 1kg 증가할 때의 효과를 선형근사식을 이용하여 구하라. 이 값은 상대적으로 큰 증가량을 나타내므로 (2) 0.10kg 증가에 대하여 결과를 해석하고, (3) 무게가 0.58kg일 때 표준편차 증가에 대하여 결과를 해석하라.
+  
+사례에서 로지스틱 회귀모형 적합 결과를 바탕으로 추정한 예측식은 다음과 같다.
+
+$$
+logit[\pi] = log[\frac{\pi}{1-\pi}] =log[\frac{P(Y=1)}{1-P(Y=1)}] = \alpha + \beta x = -3.6947 + 1.8151x
+$$
+  
+위 예측식을 토대로 표본무게 평균값(2.437kg)일 때의 P(Y=1)의 추정치를 구하면 다음과 같다.
+
+$$
+\hat P(Y=1) = \hat \pi(x) = \frac{e^{\alpha + \beta x}}{1 + e^{\alpha + \beta x}} = 0.6745
+$$
+    
+이때, 선형근사를 통해 중량이 1kg 증가할 때 P(Y=1)의 변화를 구하면 다음과 같다.
+
+$$
+\beta \pi(x)[1-\pi(x)] = 1.8151 \times 0.6745 \times 0.3255 = 0.3985
+$$
+  
+이때 중량이 0.1kg 증가하면 P(Y=1) 값은 0.0399만큼 증가하게 된다. 따라서, 선형근사를 바탕으로 추정했을 때에 투구게의 평균중량 2.437kg에서 중량이 0.1kg 증가하면 부수체를 가질 확률은 약 0.4% 증가할 것이라고 예측할 수 있다.
+  
+한편, 무게가 0.58kg인 개체의 P(Y=1)값을 추정하면 $\hat \pi_i = 0.0665$이다. 이때 표준편차는 $SE = \sqrt{\hat \pi(1-\hat \pi)/n} = 0.0173$으로 개체중량 평균치 2.437kg일 때의 표준편차 0.0332보다 
+
 
 
 ### b. 무게가 0.10kg 증가에 따른 무게의 평균주변효과를 구하여 그 결과를 해석하라.
 
+4.5.2
+
 
 ### c. y=1인 표본비율을 분계점으로 사용하여 분류표를 만들어라. 민감도와 특이도를 구하고 그 값을 해석하라.
 
+4.6.1
+
+
 ### d. ROC 곡선을 구하고 AUC를 구하여 결과를 해석하라.
 
-
+4.6.2
 
 ## 2. 사례-대조 연구관련 논문을 읽고 A4용지 1~2 페이지 국문으로 정리
 
