--- a/[ML]homework1.Rmd
+++ b/[ML]homework1.Rmd
@@ -219,33 +219,85 @@ print(reg_cement.summary())
 4. R패키지 ISLR에 있는 데이터셋 Hitters는 1986~1987년도 미국 메이저리그 타자 자료이다. 자료는 다음과 같다. 이 자료에서 salary를 종속변수로 한 모형을 적합하고자 한다.
 
 ```{r 4}
+# data loading
 library(ISLR)
-head(Hitters, 3)
+dt <- Hitters
 ```
 
 (1) R 시스템에서 먼저 결측치 자료를 없앤 후, ridge regression 및 lasso regression을 적합하고 결과를 해석하시오.
-
 https://rpago.tistory.com/59
 https://analysisbugs.tistory.com/199
 
-```{r 4-1}
-# 결
-dt <- Hitters[complete.cases(Hitters),]
-dim(dt)
+```{r 4-1-1}
+# 결측치 제거
+dim(dt) # 322*20 데이터
+dt <- dt[complete.cases(dt),]
+dim(dt) # 263*20 데이터로 정리
+# 파이썬 분석을 위해 csv 파일로 export
+write.csv(dt, file = 'ML_3.csv', row.names = F)
+```
 
+```{r 4-1-2}
+# 다중선형회귀분석
+model_lm <- lm(Salary~., dt)
+res_lm <- sum(((model_lm$residuals)^2))/nrow(dt) # MSE = 92017.87
+summary(model_lm)
+```
+
+```{r 4-1-3}
+# ridge
+## preprocessing variables to matrix 
+X <- model.matrix(Salary~., dt)[,-1] #dt[names(dt) != 'Salary'])
+Y <- dt$Salary
+## fitting
+model_ridge <- glmnet(X, Y, alpha = 0)
+## plotting
+plot(model_ridge, xvar = 'lambda', label = T,
+     main = 'Ridge regression coefficient shrinkage vs log lambda')
+## cross validation error
+cv_ridge <- cv.glmnet(X, Y, alpha = 0)
+## plotting
+plot(cv_ridge, main = 'Ridge regression cross validation error(10 fold)')
+## best MSE
+best_ridge <- cv_ridge$lambda.min
+best_ridge # MSE = 238.0769
+```
+
+```{r 4-1-4}
+# lasso
+## fittiing
+model_lasso <- glmnet(X, Y) 
+## plotting
+plot(model_lasso, xvar = 'lambda', label = T, 
+     main = 'Lasso regularization - Coefficient shrinkage vs. log lambda')
+## cross validation error
+cv_lasso <- cv.glmnet(X, Y, alpha = 0)
+plot(cv_lasso)
+## best MSE
+best_lasso <- cv_lasso$lambda.min
+best_lasso # MSE = 25.52821
 ```
 
 (2) 야구 자료 데이터셋을 파일로 저장한 후, 파이썬을 이용하여 ridge regression 및 lasso regression을 적합하고 R의 결과와 비교하시오.
 
-```{r 4-2-1}
+```{python 4-2-1}
+# import necessary packages
+import numpy as np
+import pandas as pd
+import os
+from sklearn.preprocessing import MinMaxScaler
+from sklearn.linear_model import Ridge, Lasso
 
+# multiple linear regression
+dt = pd.read_csv('ML_3.csv')
+X = dt.iloc[:, dt.columns != 'Salary']
+Y = dt.iloc[:, dt.columns == 'Salary']
 ```
 
 ```{python 4-2-2}
-
+# Ridge
 
 ```
-
 
 5. R 'ade4'패키지에 있는 'deug' 자료를 이용하여 주성분분석을 실시하고자 한다. 다음에 답하시오.
 
@@ -292,7 +344,7 @@ deug_tab = deug$tab
 ```{r 7}
 library(HSAUR)
 data(watervoles)
-write.csv(watervoles, file = 'ML_3.csv')
+write.csv(watervoles, file = 'ML_3.csv', row.names = F)
 ```
 
 (1) R을 이용하여 MDS를 시행한 결과를 보이고, 분석하시오.
