--- a/[ML]homework1.Rmd
+++ b/[ML]homework1.Rmd
@@ -228,74 +228,128 @@ dt <- Hitters
 https://rpago.tistory.com/59
 https://analysisbugs.tistory.com/199
 
-```{r 4-1-1}
+```{r 4-1-1 preprocessing}
 # 결측치 제거
 dim(dt) # 322*20 데이터
 dt <- dt[complete.cases(dt),]
 dim(dt) # 263*20 데이터로 정리
+
+## divide explain & response variables
+X <- model.matrix(Salary~., dt)[,-1] #dt[names(dt) != 'Salary'])
+y <- dt$Salary
+
+## divide train & test dataset
+train_idx <- sample(1:nrow(X), nrow(X)/2)
+
 # 파이썬 분석을 위해 csv 파일로 export
 write.csv(dt, file = 'ML_3.csv', row.names = F)
 ```
 
-```{r 4-1-2}
-# 다중선형회귀분석
-model_lm <- lm(Salary~., dt)
-res_lm <- sum(((model_lm$residuals)^2))/nrow(dt) # MSE = 92017.87
-summary(model_lm)
+릿지회귀분석 - 데이터셋을 train, test으로 나눠서 train으로 k-fold 교차검증해서 최적의 lambda값을 찾아내고 그 값을 test에 적합해서 추정 MSE를 구하고 동일한 조건에서 구한 다중선형회귀 모형의 추정 MSE값과 비교
+
+```{r 4-1-2 linear model}
+# multiple linear regression
+model_lm <- lm(y~X, subset = train_idx) #y[train_idx] ~ X[train_idx,])
+model_lm_hat <- predict(model_lm, newx = X[-train_idx,])
+mean((model_lm_hat - y[-train_idx])**2) # estimate MSE = 310760.4
+coef_lm <- model_lm$coefficients
+coef_lm
 ```
 
-```{r 4-1-3}
-# ridge
-## preprocessing variables to matrix 
-X <- model.matrix(Salary~., dt)[,-1] #dt[names(dt) != 'Salary'])
-Y <- dt$Salary
+```{r 4-1-3 ridge}
+# ridge regression
 ## fitting
-model_ridge <- glmnet(X, Y, alpha = 0)
+model_ridge <- glmnet(X[train_idx,], y[train_idx], alpha = 0) # alpha는 elasticnet param으로, 0이면 릿지, 1이면 라쏘
+
 ## plotting
 plot(model_ridge, xvar = 'lambda', label = T,
      main = 'Ridge regression coefficient shrinkage vs log lambda')
-## cross validation error
-cv_ridge <- cv.glmnet(X, Y, alpha = 0)
-## plotting
-plot(cv_ridge, main = 'Ridge regression cross validation error(10 fold)')
-## best MSE
-best_ridge <- cv_ridge$lambda.min
-best_ridge # MSE = 238.0769
+
+## k-fold cross validation
+ridge_cv <- cv.glmnet(X[train_idx, ], y[train_idx], alpha = 0)
+plot(ridge_cv, main = 'Ridge regression cross validation error(10 fold)')
+best_lambda <- ridge_cv$lambda.min
+
+## estimated MSE
+best_ridge_hat <- predict(model_ridge, s = best_lambda, newx = X[-train_idx, ])
+mean((best_ridge_hat - y[-train_idx])**2)
+
+## final model
+model_ridge_final <- glmnet(X, y, alpha = 0)
+coef_ridge <- predict(model_ridge_final, s = best_lambda, type = 'coefficients')
+coef_ridge
 ```
 
-```{r 4-1-4}
-# lasso
-## fittiing
-model_lasso <- glmnet(X, Y) 
+
+```{r 4-1-4 lasso}
+model_lasso <- glmnet(X[train_idx,], y[train_idx], alpha = 1) # alpha는 elasticnet param으로, 0이면 릿지, 1이면 라쏘
+
 ## plotting
-plot(model_lasso, xvar = 'lambda', label = T, 
-     main = 'Lasso regularization - Coefficient shrinkage vs. log lambda')
-## cross validation error
-cv_lasso <- cv.glmnet(X, Y, alpha = 0)
-plot(cv_lasso)
-## best MSE
-best_lasso <- cv_lasso$lambda.min
-best_lasso # MSE = 25.52821
+plot(model_lasso, xvar = 'lambda', label = T,
+     main = 'Lasso regularization - coefficient shrinkage vs log lambda')
+
+## k-fold cross validation
+lasso_cv <- cv.glmnet(X[train_idx, ], y[train_idx], alpha = 1)
+plot(lasso_cv, main = 'Lasso regularization cross validation error(10 fold)')
+best_lambda <- lasso_cv$lambda.min
+
+## estimated MSE
+best_lasso_hat <- predict(model_lasso, s = best_lambda, newx = X[-train_idx, ])
+mean((best_lasso_hat - y[-train_idx])**2)
+
+## final model
+model_lasso_final <- glmnet(X, y, alpha = 1)
+coef_lasso <- predict(model_lasso_final, s = best_lambda, type = 'coefficients')
+coef_lasso
+```
+
+```{r 4-1-6 comparison}
+coef_comp <- data.frame(as.matrix(coef_lm), as.matrix(coef_ridge), as.matrix(coef_lasso))
+names(coef_comp) = c('lm', 'ridge', 'lasso')
+coef_comp
 ```
 
 (2) 야구 자료 데이터셋을 파일로 저장한 후, 파이썬을 이용하여 ridge regression 및 lasso regression을 적합하고 R의 결과와 비교하시오.
 
-```{python 4-2-1}
+```{python 4-2-1 preprocessing}
 # import necessary packages
 import numpy as np
 import pandas as pd
 import os
 from sklearn.preprocessing import MinMaxScaler
-from sklearn.linear_model import Ridge, Lasso
+import sklearn.linear_model as lm
+from sklearn.model_selection import train_test_split
 
-# multiple linear regression
+# import dataset
 dt = pd.read_csv('ML_3.csv')
+
+# divide explain and response variables
 X = dt.iloc[:, dt.columns != 'Salary']
-Y = dt.iloc[:, dt.columns == 'Salary']
+y = dt.iloc[:, dt.columns == 'Salary']
+
+# preprocessing : convert categorical to integer
+X.convert_dtypes().dtypes
+
+## league
+X['League'] = X.League.astype('category').cat.codes
+## division
+X['Division'] = X.Division.astype('category').cat.codes
+## newleague
+X['NewLeague'] = X.NewLeague.astype('category').cat.codes
+
+# train, test 분할
+X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 0)
+
+# scale
+scaler = MinMaxScaler()
+X_train_scaled = scaler.fit_transform(X_train)
+X_test_scaled = scaler.fit_transform(X_test)
 ```
 
-```{python 4-2-2}
-# Ridge
+```{python 4-2-2 ridge}
+# ridge
+## fitting
+model_ridge = lm.Ridge().fit(X_train_scaled, y_train)
 
 ```
 
@@ -358,3 +412,7 @@ write.csv(watervoles, file = 'ML_3.csv', row.names = F)
 ```{python 7-2}
 
 ```
+
+
+(참조자료)
+https://rpago.tistory.com/59
