--- a/[ML]homework1.Rmd
+++ b/[ML]homework1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Untitled"
-output: html_document
+output: word_document
 date: "2023-03-19"
 ---
 
@@ -206,14 +206,14 @@ import numpy as np
 import statsmodels.formula.api as sm
 
 dt = pd.read_csv('ML_2.csv')
-<<<<<<< HEAD
+#<<<<<<< HEAD
 reg_cement = sm.ols(formula = 'y ~ x1 + x2 + x3 + x4', data = dt).fit()
 print(reg_cement.summary())
 
-=======
+#=======
 reg_cement = sm.ols('y ~ x1 + x2 + x3 + x4', data = dt).fit()
 print(reg_cement.summary())
->>>>>>> 13db0d8e796f37fece85bd5a92d129b53ecc3d2b
+#>>>>>>> 13db0d8e796f37fece85bd5a92d129b53ecc3d2b
 ```
 
 4. R패키지 ISLR에 있는 데이터셋 Hitters는 1986~1987년도 미국 메이저리그 타자 자료이다. 자료는 다음과 같다. 이 자료에서 salary를 종속변수로 한 모형을 적합하고자 한다.
@@ -272,7 +272,7 @@ best_lambda <- ridge_cv$lambda.min
 
 ## estimated MSE
 best_ridge_hat <- predict(model_ridge, s = best_lambda, newx = X[-train_idx, ])
-mean((best_ridge_hat - y[-train_idx])**2)
+mean((best_ridge_hat - y[-train_idx])**2) # estimated MSE = 115115.2
 
 ## final model
 model_ridge_final <- glmnet(X, y, alpha = 0)
@@ -295,7 +295,7 @@ best_lambda <- lasso_cv$lambda.min
 
 ## estimated MSE
 best_lasso_hat <- predict(model_lasso, s = best_lambda, newx = X[-train_idx, ])
-mean((best_lasso_hat - y[-train_idx])**2)
+mean((best_lasso_hat - y[-train_idx])**2) # estimated MSE = 118056.6
 
 ## final model
 model_lasso_final <- glmnet(X, y, alpha = 1)
@@ -349,32 +349,181 @@ X_test_scaled = scaler.fit_transform(X_test)
 ```{python 4-2-2 ridge}
 # ridge
 ## fitting
+## alpha = 1이 기본 설정, R의 glmnet함수와는 달리 alpha값은 L2 가중치(glmnet에서의 lambda)
 model_ridge = lm.Ridge().fit(X_train_scaled, y_train)
 
+## R^2 of the training model
+print('R-squared score (training): {:.3f}'.format(model_ridge.score(X_train_scaled, y_train))) # R^2 = 0.484
+print('R-squared score (test): {:.3f}'.format(model_ridge.score(X_test_scaled, y_test))) # hat{R^2} = 0.448
+
+## alpha - weight plot (glmnet에서의 lambda-coef plot)
+import matplotlib.pyplot as plt
+coefs = []
+alphas = 10**np.linspace(10, -2, 100)*0.5
+
+# Train the model with different regularisation strengths
+for a in alphas:
+    ridge = lm.Ridge(alpha = a)
+    ridge.fit(X_train_scaled, y_train)
+    coefs.append(ridge.coef_[0])
+
+# Display results
+ax = plt.gca()
+ax.plot(alphas, coefs)
+ax.set_xscale("log")
+plt.xlabel("alpha")
+plt.ylabel("weights")
+plt.title("Ridge coefficients as a function of the regularization")
+plt.axis("tight")
+
+plt.show()
 ```
+
+```{python 4-2-3 ridgeCV}
+from sklearn.metrics import mean_squared_error
+# calculate mse of regular linear regression
+linear_reg = lm.Ridge(alpha = 0)
+linear_reg.fit(X_train_scaled, y_train)
+mean_squared_error(y_test, linear_reg.predict(X_test_scaled)) # mse = 164103
+
+
+# calculate the best alpha
+ridgecv = lm.RidgeCV(alphas = alphas, scoring = 'neg_mean_squared_error')
+ridgecv.fit(X_train_scaled, y_train)
+ridgecv.alpha_
+
+# calculate MSE under the best alpha
+best_ridge = lm.Ridge(alpha = ridgecv.alpha_)
+best_ridge.fit(X_train_scaled, y_train)
+mean_squared_error(y_test, best_ridge.predict(X_test_scaled)) # mse = 159646
+```
+```{python 4-2-4 lasso}
+# fitting
+linlasso = lm.Lasso(alpha = 0.1, max_iter = 10000).fit(X_train_scaled, y_train)
+
+# R^2 and coefs
+print('Non-zero features: {}'
+     .format(np.sum(linlasso.coef_ != 0))) # n of non-zero coefs = 17
+print('R-squared score (training): {:.3f}'
+     .format(linlasso.score(X_train_scaled, y_train)))  # R^2 = 0.495
+print('R-squared score (test): {:.3f}\n'
+     .format(linlasso.score(X_test_scaled, y_test))) # hat{R^2} = 0.458
+print('Features with non-zero weight (sorted by absolute magnitude):')
+
+for e in sorted (list(zip(list(X), linlasso.coef_)),
+                key = lambda e: -abs(e[1])):
+    if e[1] != 0:
+        print('\t{}, {:.3f}'.format(e[0], e[1]))
+        
+# alpha-weight plot
+coefs = []
+
+# Train the model with different regularisation strengths
+for a in alphas:
+    lasso = lm.Lasso(alpha = a, max_iter = 10000)
+    lasso.fit(X_train_scaled, y_train)
+    coefs.append(lasso.coef_[0])
+
+# Display results
+ax = plt.gca()
+ax.plot(alphas, coefs)
+ax.set_xscale("log")
+plt.xlabel("alpha")
+plt.ylabel("weights")
+plt.title("Lasso coefficients as a function of the regularization")
+plt.axis("tight")
+
+plt.show()
+```
+
+```{python 4-2-5 lassoCV}
+# calculate the best alpha
+lassocv = lm.LassoCV(alphas = alphas, max_iter = 10000)
+lassocv.fit(X_train_scaled, y_train)
+
+# calculate MSE under the best alpha
+best_lasso = lm.Lasso(alpha = lassocv.alpha_)
+best_lasso.fit(X_train_scaled, y_train)
+mean_squared_error(y_test, best_lasso.predict(X_test_scaled)) # mse = 157990
+```
+
+
+```{python 4-2-5 coefs}
+df_coef = pd.concat([pd.Series(linear_reg.coef_[0]), pd.Series(best_ridge.coef_[0]), pd.Series(best_lasso.coef_)], 
+                    axis = 1)
+df_coef.columns = ['Regular', 'Ridge', 'Lasso']
+df_coef.index = X.columns
+df_coef
+```
+
+참고자료
+https://rpago.tistory.com/59
+http://www.science.smith.edu/~jcrouser/SDS293/labs/lab10-py.html
+
 
 5. R 'ade4'패키지에 있는 'deug' 자료를 이용하여 주성분분석을 실시하고자 한다. 다음에 답하시오.
 
 ```{r 5}
 library(ade4)
 data(deug)
-deug_tab = deug$tab
+
+var(deug$tab)
+# 각 과목의 분산 차이가 심함, 점수 단위는 같지만 표준화를 통해 과목 간 편차를 조정
 ```
 
 (1) R을 이용하여 주성분분석을 실시하시오.
 
-```{r 5-1}
+```{r 5-1 PCA}
+library(dplyr)
+library(ggplot2)
 
+deugPCA = prcomp(deug$tab, scale = T)
+summary(deugPCA)
+screeplot(deugPCA, type = 'l', pch = 1, main = 'Scree Plot')
+# 2번 성분까지 포함
+
+deugPCA$rotation[, 1:2]
+# 1성분 - 수리적 사고
+# 2성분 - 문리적 사고
+
+dt <- data.frame(deugPCA$x)
+dt1 <- cbind(dt, deug$result)
+
+# plot for pc1 and pc2
+ggplot(dt1, aes(x = PC1, y = PC2, col = deug$result)) +
+  geom_point() + ggtitle("Top 2 Principlal Components")
 ```
+
 
 (2) 데이터를 csv파일로 저장한 후, 파이썬을 이용하여 주성분분석을 실시하고, R의 결과와 비교하시오.
 
 ```{r 5-2-1}
-
+dt = cbind(deug$tab, deug$result)
+colnames(dt)[10] <- 'result'
+write.csv(dt, file = 'deug.csv', row.names = F)
 ```
 
 ```{python 5-2-2}
+from sklearn import decomposition as dec
+from sklearn import datasets
+from sklearn.preprocessing import StandardScaler
+import matplotlib.pyplot as plt
 
+dt = pd.read_csv('deug.csv')
+dt['result_idx'] = dt['result'].replace({'A+': 5, 'A':4, 'B':3, 'B-':2, 'C-':1, 'D':0})
+dt.iloc[:, 0:8] = StandardScaler().fit_transform(dt.iloc[:, 0:8])
+
+pca = dec.PCA(4)
+projected = pca.fit_transform(dt.iloc[:,0:8])
+
+plt.scatter(x = projected[:, 0], y = projected[:, 1],
+           c = dt['result_idx'], edgecolor = 'none', alpha = 0.5,
+           cmap = 'Spectral_r') #
+plt.xlabel('PC1')
+plt.ylabel('PC2')
+plt.colorbar()
+plt.title('Top 2 Principal Components')
+plt.show()
 ```
 
 ## 6. 다음은 1973년 미국 각 주의 강력범죄 자료이다. 변수 murder, asault, rape는 인구 100,000명당 사고 건수이고, urbanpop는 도시인구 비율이다. 이 자료를 이용하여 주성분분석을 하고자 한다.
@@ -382,13 +531,52 @@ deug_tab = deug$tab
 (1) R을 이용하여 실행하고 결과를 해석하시오.
 
 ```{r 6-1}
+dt <- read.csv(file = '(ml)crime.csv')
+var(dt[,2:5])
 
+dtPCA <- prcomp(dt[,2:5], scale = T)
+summary(dtPCA)
+screeplot(dtPCA, type = 'l', pch = 1, main = 'Scree Plot')
+# pc1, pc2 선택
+
+dtPCA$rotation[,1:2]
+# pc1 : 범죄요인, pc2 : 인구요인
+
+dt1 <- cbind(data.frame(dtPCA$x), dt$state)
+colnames(dt1)[5] <- 'state'
+
+# 시각화
+ggplot(dt1, aes(x = PC1, y = PC2)) +
+  geom_point() + geom_text(aes(label = state), size = 3, vjust = 2) +
+  ggtitle("Top 2 Principlal Components")
 ```
 
 (2) 파이썬을 이용하여 실행하고 R의 결과와 비교하시오.
 
 ```{python 6-2}
+from sklearn import decomposition as dec
+from sklearn import datasets
+from sklearn.preprocessing import StandardScaler
+import matplotlib.pyplot as plt
 
+dt = pd.read_csv('(ml)crime.csv')
+#dt['result_idx'] = dt['result'].replace({'A+': 5, 'A':4, 'B':3, 'B-':2, 'C-':1, 'D':0})
+dt.iloc[:, 1:4] = StandardScaler().fit_transform(dt.iloc[:, 1:4])
+
+pca = dec.PCA(2)
+projected = pca.fit_transform(dt.iloc[:,1:4])
+
+plt.scatter(x = projected[:, 0], y = projected[:, 1])
+
+for i in range(len(dt)):
+    row = dt.iloc[i]
+    name = row['state']
+    x = projected[i, 0]
+    y = projected[i, 1]
+    plt.text(x+0.05, y-0.05, name, fontsize = 10)
+
+plt.title('Top 2 Principal Components')
+plt.show()
 ```
 
 
@@ -398,20 +586,79 @@ deug_tab = deug$tab
 ```{r 7}
 library(HSAUR)
 data(watervoles)
-write.csv(watervoles, file = 'ML_3.csv', row.names = F)
+
+write.csv(watervoles, file = 'ML_3.csv')
 ```
 
 (1) R을 이용하여 MDS를 시행한 결과를 보이고, 분석하시오.
 
 ```{r 7-1}
+library(smacof)
+mdsWV <- smacofSym(watervoles, ndim  = 2)
+mdsWV
 
+plot(mdsWV$conf[,1], mdsWV$conf[,2], type = 'n', xlab = '', ylab = '', main = 'MDS of Water Voles Data')
+text(mdsWV$conf[,1], mdsWV$conf[,2], rownames(watervoles), cex = 0.9)
+abline(h = 0, v = 0, lty = 3)
+```
+
+```{r 7-1-2 screeplot}
+scplt <- function(){
+  strval = vector()
+  for (i in seq(1, 4, 1)){
+    mds_res <- smacofSym(watervoles, ndim = i)
+    strval <- c(strval, mds_res$stress)
+  }
+  plot(strval, type = 'l', 
+       xlab = 'no of dimesion', ylab = 'stress value', main = 'Scree Plot by no of Dimension')
+  points(strval, cex = 0.9)
+}
+
+scplt()
 ```
 
 (2) csv파일로 저장한 후, 파이썬을 이용하여 MDS를 시행하고 R의 결과와 비교하여 설명하시오.
 
-```{python 7-2}
+```{python 7-2 mds}
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+from sklearn.manifold import MDS
 
+dt = pd.read_csv('ML_3.csv', index_col = 0)
+
+mdsWV = MDS(dissimilarity = 'precomputed', n_components = 2, random_state = 40, max_iter = 1000, eps = 1e-9)
+X = mdsWV.fit_transform(dt)
+
+theta = 80*np.pi / 180
+rot = np.array([[np.cos(theta), np.sin(theta)],
+               [np.sin(theta), -np.cos(theta)]])
+Xr = np.dot(X, rot)
+
+plt.scatter(Xr[:, 0], Xr[:, 1])
+
+for i in range(len(dt)):
+    plt.text(Xr[i, 0], Xr[i, 1]-0.03, dt.index[i])
+plt.axis('equal')
+plt.xlabel('Dim1')
+plt.ylabel('Dim2')
+plt.title('MDS of Water Voles Data')
+plt.show()
 ```
+
+```{python 7-2-2 screeplot}
+k_range = range(1, 5)
+stress = [MDS(dissimilarity = 'precomputed', n_components = k, random_state = 42,
+             max_iter = 300, eps = 1e-9).fit(dt).stress_ for k in k_range]
+
+plt.plot(k_range, stress)
+plt.xlabel('no of dim')
+plt.ylabel('stress value')
+plt.title('Scree Plot by no of dimension')
+plt.show()
+```
+
+
 
 
 (참조자료)
